--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
         </div>
         <ul class="nav navbar-nav navbar-right">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">Contact</a>
-                </li>
-            </ul>
-            </form>
+            <li class="nav-item">
+                <a class="nav-link text-dark" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" href="#">Contact</a>
+            </li>
+        </ul>
+        </form>
         </div>
     </nav>
     <div class="box">
@@ -74,11 +74,12 @@
         <div class="push"></div>
     </div>
 
-    <footer class="footer mt-auto py-3">
-            <div class="container">
-              <span class="text-center">Copyright &#169;</span>
-            </div>
-          </footer>
+    <footer class="footer">
+        <div class="container text-center">
+            Copyright &copy;
+        </div>
+    </footer>
+   
 
 
 </body>
